# world-cup-scraper-w-claude

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: capture_fixtures.py
src/wc_scraper/: __init__.py  cli.py  config.py  discovery.py  espn_client.py  models.py  parsers.py  pipeline.py
src/wc_scraper/api/: __init__.py  app.py  cli.py  config.py  db.py  keys.py  queries.py  ratelimit.py  routes_admin.py  routes_read.py  schemas.py  security.py
src/wc_scraper/db/: loader.py  schema.dbml  schema.sql
tests/: test_api.py  test_parsers.py  test_pipeline.py
tests/fixtures/: lineups_264123.html  lineups_760436.html  scoreboard_20100711.html
