[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wc-scraper"
version = "0.1.0"
description = "Headless scraper for FIFA World Cup player stats (ESPN -> Supabase/Postgres)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
wc-scrape = "wc_scraper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
